Add Header movie details view component. Rewrote the majority of components from Class-stype to Functional-style. Used react hooks for state and context.

--- a/src/home/content/gallery/MovieCard.scss
+++ b/src/home/content/gallery/MovieCard.scss
@@ -1,4 +1,5 @@
 .movie-card {
+  cursor: pointer;
   position: relative;
 
   // This hack allows to open a menu right where the button is after click.
@@ -62,6 +63,7 @@
 
   .genre-tags {
     text-align: left;
+    text-transform: capitalize;
     font-size: 11px;
     color: #ffffff;
     mix-blend-mode: normal;
